--- a/client/src/app/products/filter-sidebar/filter-sidebar.component.scss
+++ b/client/src/app/products/filter-sidebar/filter-sidebar.component.scss
@@ -2,6 +2,7 @@
     .filter_box {
         display: flex;
         flex-direction: column;
+        padding: 1rem 0rem;
 
         .input_box {
             display: flex;
