--- a/client/src/app/products/price-control/price-control.component.html
+++ b/client/src/app/products/price-control/price-control.component.html
@@ -1,5 +1,6 @@
 <div class="price_container">
   <div class="price_control">
-      <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ng5-slider>
+      <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" 
+      [options]="options" (userChangeEnd)="userChangeEnd($event)"></ng5-slider>
   </div>
 </div>
