--- a/client/src/app/products/price-control/price-control.component.scss
+++ b/client/src/app/products/price-control/price-control.component.scss
@@ -2,7 +2,8 @@ $range_highligh: #748ffc;
 $range_dark: #364fc7;
 
 .price_control {
-  background-color: #4c6cf0;
+  // background-color: #4c6cf0;
+  background-color: transparent;
   form {
     display: flex;
 
@@ -15,6 +16,7 @@ $range_dark: #364fc7;
       .range_line {
         width: 100%;
         height: 2px;
+        // background-color: #5f00d7;
         background-color: #5f00d7;
       }
       .first_range, .second_range {
@@ -39,7 +41,7 @@ $range_dark: #364fc7;
 
 ::ng-deep {
   .price_control .ng5-slider .ng5-slider-bar {
-    background: #ffe4d1;
+    background:#cdd5ed;
     height: 2px;
   }
   .price_control .ng5-slider .ng5-slider-selection {
@@ -47,15 +49,16 @@ $range_dark: #364fc7;
   }
 
   .price_control .ng5-slider .ng5-slider-pointer {
-    position: relative;
-    width: .6rem;
-    height: .6rem;
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
     top: 50%;
     transform: translateY(-50%);
     bottom: 0;
     border-radius: 50%;
     background-color: $range_dark;
     border: 3px solid white;
+    transition-duration: .2s !important;
   }
 
   .price_control .ng5-slider .ng5-slider-active {
