--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,14 @@
+<ul class="app_links">
+    <li>
+      <a [routerLink]="['']">Home</a>
+    </li>
+    <li>
+      <a routerLink="/products">Products</a>
+    </li>
+    <li>
+      <a routerLink="/categories">Categories</a>
+    </li>
+  </ul>
 <div class="nav__wrapper">
   <nav>
     <div class="container">
@@ -6,18 +17,15 @@
           <div id="logo">
             <img src="/assets/images/logo_150.png" alt="ECHO STORE LOGO">
           </div>
-          <ul class="app_links">
-            <li>
-              <a [routerLink]="['']">Home</a>
-            </li>
-            <li>
-              <a routerLink="/products">Products</a>
-            </li>
-            <li>
-              <a routerLink="/categories">Categories</a>
-            </li>
-          </ul>
 
+          <div id="search_input__container">
+            <div class="input_wrapper">
+              <input type="text">
+              <button class="icon_search_wrapper">
+                <span class="icon-search"></span>
+              </button>
+            </div>
+          </div>
           <ul class="social_links">
             <li>
               <a href="https://www.linkedin.com/in/ahmed-atef-73b3b5b9/" target="_blank">LinkedIn</a>
@@ -28,8 +36,4 @@
     </div>
 
   </nav>
-</div>
-
-<div id="breadcrumb">
-  <app-breadcrumb></app-breadcrumb>
 </div>
