--- a/client/src/app/products/filter-sidebar/filter-sidebar.component.html
+++ b/client/src/app/products/filter-sidebar/filter-sidebar.component.html
@@ -1,22 +1,31 @@
 <div id="sidebar_wrapper">
-  <div class="filter_box" *ngFor="let filter of filters">
-      <app-collapsible [title]="filter.name">
-        
-        <!-- (filter.type == 2) ====> Range Input for Price -->
-        <ng-container *ngIf="filter.type == 2">
-          <app-price-control></app-price-control>
-        </ng-container>
-        <ul *ngIf="filter.type == 1">
-          <li *ngFor="let control of filter.controls" class="input_box">
-            <input type="checkbox" [name]="filter.name" [value]="control"
-            [id]="control" (change)="getFilter($event, filter.name, control)">
-            <label [for]="control">
-              {{control}} 
-              <!-- <span *ngIf="filter.name == 'RAM'">GB</span> -->
-              <span *ngIf="filter.name == 'inches'">Inche</span>
-            </label>
-          </li>
-        </ul>
-      </app-collapsible>
-  </div>
+  <form  #filterForm="ngForm">
+    <div class="filter_box" *ngFor="let filter of filters">
+        <app-collapsible [title]="filter.name">
+          
+          <!-- (filter.type == 2) ====> Range Input for Price -->
+          <ng-container *ngIf="filter.type == 2">
+            <app-price-control (range)="setFilter(null, filter.name, $event)"></app-price-control>
+          </ng-container>
+  
+          <ul *ngIf="filter.type == 1">
+            <li class="input_box_container">
+              <fieldset [name]="filter.name" [ngModelGroup]="filter.name">
+              <ng-container *ngFor="let control of filter.controls; let i = index">
+                <div class="input_checkbox">
+                  <input type="checkbox"  [name]="control"  ngModel [value]="control"
+                  [id]="control" (change)="setFilter($event, filter.name, filter.name == 'cpu_cores' ? control.id : control)">
+                  <label [for]="control">
+                    {{filter.name == 'cpu_cores' ? control.family : control}} 
+                    <span *ngIf="filter.name == 'ram_cap'">GB</span>
+                    <span *ngIf="filter.name == 'inches'">Inche</span>
+                  </label>
+                </div>
+              </ng-container>
+            </fieldset>
+              </li>
+          </ul>
+        </app-collapsible>
+    </div>
+  </form>
 </div>
