--- a/client/src/app/shared/collapsible/collapsible.component.scss
+++ b/client/src/app/shared/collapsible/collapsible.component.scss
@@ -14,6 +14,6 @@
     }
     .collapse_content {
         transition: height .2s ease-in-out;
-        overflow: hidden;
+        overflow-y: scroll
     }
 }
