--- a/client/src/app/shared/navbar/navbar.component.scss
+++ b/client/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,24 @@
+@import './../../../assets/styles/colors';
+.app_links {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    background-color: $main_dark;
+    padding: .5rem 1rem;
+    li {
+        margin: 0rem 1rem;
+        font-size: .8rem;
+        font-weight: 600;
+        a {
+            color: $text_light;
+
+            &:hover {
+                color: white;
+            }
+        }
+    }
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -8,6 +29,40 @@ nav {
         
         img {
             width: 50%;
+        }
+    }
+    #search_input__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 80%;
+        
+        .input_wrapper {
+            height: 40px;
+            position: relative;
+            width: 90%;
+            box-shadow: 0px 6px 2px -3px rgba(0,0,0,.1);
+            
+            .icon_search_wrapper {
+                position: absolute;
+                right: 0;
+                width: 40px;
+                height: 100%;
+                top: -1px;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-weight: bold;
+                background-color: $blue;
+                border: none;
+                
+            }
+            input {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
     ul {
@@ -21,10 +76,6 @@ nav {
             }
             margin: 0rem .5rem;
         }
-        &.app_links {
-            width: 60%;
-        }
-
         &.social_links {
             background-color: #fbfbfb;
         }
