--- a/client/src/assets/styles/_colors.scss
+++ b/client/src/assets/styles/_colors.scss
@@ -1,5 +1,7 @@
-$main_dark: #353646;
-$main_light: #5b8191;
+$main_dark: #53549f;
+$main_light: #8b8cf5;
+
+$dark: #1d1e51;
 
 $bg_light: #fbfbfb;
 $border_grey: #e5e5e5;
