--- a/client/src/app/shared/breadcrumb/breadcrumb.component.scss
+++ b/client/src/app/shared/breadcrumb/breadcrumb.component.scss
@@ -7,7 +7,14 @@
     border-bottom: 1px solid $border_grey;
     display: flex;
     align-items: center;
-
+    #bread_crumb__container {
+        & > div:not(:first-child) {
+            margin-left: 1rem;
+        }
+    }
+    .bread_crumb__content {
+        flex-grow: 2
+    }
     p {
         span {
             display: inline-block;
