--- a/client/src/app/shared/collapsible/collapsible.component.scss
+++ b/client/src/app/shared/collapsible/collapsible.component.scss
@@ -5,15 +5,46 @@
     border-bottom: 1px solid $border_grey; 
     .collapse_icon {
         display: flex;
+        align-items: center;
         justify-content: space-between;
-        span {
-            display: inline-block;
+        padding: .3rem .5rem;
+        background-color: #e3e5fb;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+        font-weight: 600;
+        font-size: .9rem;
+        span.toggler_icon {
+            // display: inline-block;
             cursor: pointer;
             user-select: none;
+            transform: rotate(90deg);
+            transform-origin: center;
+            position: relative;
+            transition: .3s transform ease-in-out;
+            line-height: auto !important;
+
+
+            &.open {
+                transform: rotate((-90deg));
+            }
         }
     }
     .collapse_content {
         transition: height .2s ease-in-out;
-        overflow-y: scroll
+        overflow-y: scroll;
+        background-color: #e2e3f56e;
+        padding: 0rem .5rem;
+
+        &::-webkit-scrollbar {
+            width: 6px;
+        }
+         
+        &::-webkit-scrollbar-thumb {
+            background-color:  #6b85a1;
+            outline: 1px solid slategrey;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: #98bde5;
+        }
     }
 }
