--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -5,13 +5,14 @@
     <li>
       <a routerLink="/products">Products</a>
     </li>
-    <li>
-      <a routerLink="/categories">Categories</a>
+
+    <li class="tel">
+      <a href="tel:20-120-181-4883">20-120-181-4883</a>
     </li>
   </ul>
 <div class="nav__wrapper">
   <nav>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 d-flex justify-content-between">
           <div id="logo">
@@ -19,12 +20,12 @@
           </div>
 
           <div id="search_input__container">
-            <div class="input_wrapper">
-              <input type="text">
-              <button class="icon_search_wrapper">
-                <span class="icon-search"></span>
-              </button>
-            </div>
+            <form class="input_wrapper" #f="ngForm" (ngSubmit)="search(f.value)">
+                <input type="text" [(ngModel)]="searchText"  name="searchText" required placeholder="Search for computers by computer's name or company name..">
+                <button class="icon_search_wrapper" type="submit">
+                  <span class="icon-search"></span>
+                </button>
+            </form>
           </div>
           <ul class="social_links">
             <li>
