--- a/client/src/app/shared/navbar/navbar.component.scss
+++ b/client/src/app/shared/navbar/navbar.component.scss
@@ -3,12 +3,17 @@
     width: 100%;
     list-style: none;
     display: flex;
-    background-color: $main_dark;
+    background-color: $dark;
     padding: .5rem 1rem;
     li {
         margin: 0rem 1rem;
         font-size: .8rem;
         font-weight: 600;
+
+        &.tel {
+            flex-grow: 2;
+            text-align: right;
+        }
         a {
             color: $text_light;
 
@@ -43,7 +48,7 @@ nav {
             position: relative;
             width: 90%;
             box-shadow: 0px 6px 2px -3px rgba(0,0,0,.1);
-            
+            overflow: hidden;
             .icon_search_wrapper {
                 position: absolute;
                 right: 0;
@@ -55,13 +60,18 @@ nav {
                 justify-content: center;
                 align-items: center;
                 font-weight: bold;
-                background-color: $blue;
+                background-color: $main_dark;
                 border: none;
                 
             }
             input {
                 width: 100%;
                 height: 100%;
+                padding: .2rem 1rem;
+
+                &::placeholder {
+                    color: rgba(0,0,0, .3)
+                }
             }
         }
     }
