--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/styles/reset';
+@import './assets/styles/validation_classes';
 body {
     background-color: #F1F2F5;
 }
