add productions containers - make app responsive

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,6 +5,8 @@
     <div class="row">
       <div class="col-12">
         <router-outlet></router-outlet>
+
+        <!-- <app-scroll-to-top></app-scroll-to-top> -->
       </div>
     </div>
   </div>
