--- a/client/src/app/products/product/product.component.html
+++ b/client/src/app/products/product/product.component.html
@@ -14,7 +14,7 @@
   <div class="product_details">
     <div class="price">
       <span class="font-weight-bold">Price: </span>
-      <span>{{product.Price | currency:USD}}</span>
+      <span>{{product.Price | currency:'USD'}}</span>
     </div>
 
     <div class="graphics">
