--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -6,6 +6,10 @@
       <a routerLink="/products">Products</a>
     </li>
 
+    <li>
+      <a href="https://github.com/a7md940/ECHO-STORE" target="_blank">Github Repo</a>
+    </li>
+
     <li class="tel">
       <a href="tel:20-120-181-4883">20-120-181-4883</a>
     </li>
