--- a/client/src/app/products/products.component.html
+++ b/client/src/app/products/products.component.html
@@ -1,21 +1,22 @@
-<div id="breadcrumb" *ngIf="!(route.queryParam | async)">
+<div id="breadcrumb" *ngIf="!(route.queryParams | async)">
   <app-breadcrumb>
     <div class="search_input">
       <div class="input_wrapper">
         <form
+          id="products_form__search"
           [formGroup]="searchForm"
           (ngSubmit)="search()"
           *ngIf="!(route.queryParams | async)?.q && !(route.queryParams | async)?.c"
         >
-        <div class="input__wrapper">
+        <div class="input__wrapper computer_input__search">
           <input type="text" formControlName="text" placeholder="Search by computer name"
           [ngClass]="{
             'border__error': searchForm.invalid && searchForm.get('text').touched
           }"
           />
         </div>
-        <div class="input__wrapper">
-          <input type="text" formControlName="Company" placeholder="Search by company name"
+        <div class="input__wrapper company_input__search">
+          <input type="text"formControlName="Company" placeholder="Search by company name"
           [ngClass]="{
             'border__error': searchForm.invalid && searchForm.get('Company').touched
           }"
@@ -42,8 +43,19 @@
                     </p>
                     <p class="my-0 result__count">({{ productsState.resultCount }} products found)</p>
                   </div>
+                  
             </div>
           </div>
+    </div>
+    <div class="row">
+      <div class="col-12 offest-md-3 col-md-8 col-lg-9 offset-lg-2">
+          <div class="search_tags mb-3">
+              <span class="search__tag" *ngFor='let tag of searchTags'>
+                <span class="clear__tag" (click)="clearSearchCiteriaByTag(tag)">X</span>
+                {{tag.value}}
+              </span>
+            </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-12">
@@ -61,23 +73,18 @@
             </div>
           </div>
           <div class="col-12 col-md-8 col-lg-9 product_list__container">
-  
-
-            <div class="search_tags">
-              <span class="search__tag" *ngFor='let tag of searchTags'>
-                <span class="clear__tag" (click)="clearSearchCiteriaByTag(tag)">X</span>
-                {{tag.value}}
-              </span>
-            </div>
             <div class="product_list">
               <app-products-list
                 *ngIf="computers?.length"
                 [products]="computers"
                 (paginateOnScroll)="getProductsOnScroll()"
               ></app-products-list>
-              <app-loading-spinner
-                *ngIf="productsState.loading"
-              ></app-loading-spinner>
+              <div class="d-flex justify-content-center">
+                <app-loading-spinner
+                  *ngIf="productsState.loading"
+                ></app-loading-spinner>
+
+              </div>
             </div>
           </div>
         </div>
