--- a/client/src/app/products/products.component.scss
+++ b/client/src/app/products/products.component.scss
@@ -6,6 +6,13 @@ app-breadcrumb {
         align-items: center;
         width: 100%;
     
+        @media (min-width: 425px) and (max-width: 991px){
+            justify-content: flex-end;
+
+            & > div:not(:last-child) {
+                width: 40%;
+            }
+        }
         .input__wrapper {
             margin-right: 1rem;
             width: 20%; 
@@ -19,10 +26,10 @@ app-breadcrumb {
 
         .submit__wrapper {
             input[type="submit"] {
-                background-color: white;
+                background-color: #007bff;
                 border: 1px solid #007bff;
                 box-shadow: 0px 1px 2px 0px rgba(0,0,0,.3);
-                color: #007bff;
+                color: white;
                 font-weight: 600;
                 padding: 0.1rem 2rem;
                 font-size: .9rem;
@@ -30,8 +37,8 @@ app-breadcrumb {
                 transition-property: color background-color border-color;
                 transition: .2s ease-in-out;
                 &:hover {
-                    color: white;
-                    background-color: #007bff;
+                    color: #007bff;
+                    background-color: white;
                     border-color: #007bff;
                 }
             }
@@ -83,19 +90,7 @@ app-breadcrumb {
                         transform: translateX(0px);
                     }
                     &:checked + .overlay + .filter__container {
-                        // position: sticky;
                         transform: translateX(0px);
-
-                        // &::after {
-                        //     content: '';
-                        //     position: absolute;
-                        //     width: 120vh;
-                        //     left: 0px;
-                        //     height: 100vh;
-                        //     background-color: rgba(0,0,0,.7);
-                        //     z-index: -1;
-                        // }
-                        
                     }
                 }
                 .filter__container {
@@ -126,6 +121,7 @@ app-breadcrumb {
                 .product_list {
                     flex-grow: 2;
                     background-color: #eee;
+                    border-radius: 1rem;
                 }
             }
         }
@@ -180,4 +176,29 @@ app-breadcrumb {
             }
         }
     }
+}
+
+#products_form__search {
+    .company_input__search {
+        @media (max-width: 425px) {
+            display: none;
+        }
+    }
+
+    .computer_input__search {
+        @media (max-width: 425px) {
+            flex-grow: 2;
+            margin: 0rem;
+        }
+    }
+
+    .submit__wrapper {
+        input {
+            @media (max-width: 425px) {
+                padding: 0rem .3rem;
+                margin-left: .3rem;
+            }
+        }
+    }
+
 }
