--- a/client/src/app/shared/navbar/navbar.component.scss
+++ b/client/src/app/shared/navbar/navbar.component.scss
@@ -9,7 +9,9 @@
         margin: 0rem 1rem;
         font-size: .8rem;
         font-weight: 600;
-
+        a {
+            white-space: nowrap;
+        }
         &.tel {
             flex-grow: 2;
             text-align: right;
@@ -31,9 +33,16 @@ nav {
 
     #logo {
         display: flex;
+
         
         img {
             width: 50%;
+        }
+        @media (max-width: 425px) {
+            flex-basis: 26%;
+            img {
+                width: 100%;
+            }
         }
     }
     #search_input__container {
@@ -42,6 +51,11 @@ nav {
         align-items: center;
         position: relative;
         width: 80%;
+
+        @media (max-width: 425px) {
+            font-size: .8rem;
+            width: 100%;
+        }
         
         .input_wrapper {
             height: 40px;
@@ -68,7 +82,9 @@ nav {
                 width: 100%;
                 height: 100%;
                 padding: .2rem 1rem;
-
+                @media (max-width: 425px) {
+                    padding: .2rem .3rem;
+                }
                 &::placeholder {
                     color: rgba(0,0,0, .3)
                 }
@@ -83,11 +99,16 @@ nav {
         li {
             a {
                 padding: 1rem;
+                white-space: nowrap;
             }
             margin: 0rem .5rem;
         }
         &.social_links {
             background-color: #fbfbfb;
+
+            @media (max-width: 425px) {
+                display: none;
+            }
         }
     }
 }
